--- a/fileServer/package.json
+++ b/fileServer/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
