--- a/fileServer/tsconfig.json
+++ b/fileServer/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./dist/server",
     "strict": true,
     "sourceMap": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "typeRoots": ["node_modules/@types"]
   },
