--- a/file-control/package.json
+++ b/file-control/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-control",
+  "name": "pet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,10 +25,11 @@
   },
   "scripts": {
     "start": "set NODE_ENV=development && react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "set NODE_ENV=development && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "dev": "set NODE_ENV=development && react-app-rewired start"
+    "dev": "set NODE_ENV=development && react-app-rewired start",
+    "build-prod":"react-app-rewired build"
   },
   "eslintConfig": {
     "extends": "react-app"
