--- a/file-control/package.json
+++ b/file-control/package.json
@@ -24,12 +24,10 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "set NODE_ENV=development && react-app-rewired start",
-    "build": "set NODE_ENV=development && react-app-rewired build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "dev": "set NODE_ENV=development && react-app-rewired start",
-    "build-prod": "react-app-rewired build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
