--- a/file-control/package.json
+++ b/file-control/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pet",
+  "name": "file-control",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "antd": "3.20.5",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
@@ -24,7 +25,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
