--- a/file-control/package.json
+++ b/file-control/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^16.9.0",
     "antd": "3.20.5",
     "axios": "^0.19.2",
+    "concurrently": "^5.3.0",
     "connected-react-router": "^6.8.0",
+    "cross-env": "^7.0.2",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
