--- a/fileServer/package.json
+++ b/fileServer/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
