--- a/file-control/package.json
+++ b/file-control/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "file-server-models":"*",
     "antd": "3.20.5",
     "axios": "^0.19.2",
     "concurrently": "^5.3.0",
