--- a/fileServer/package.json
+++ b/fileServer/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "file-server-models":"*"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
