--- a/fileServer/package.json
+++ b/fileServer/package.json
@@ -16,14 +16,15 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "file-server-models": "*",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "typescript": "^3.5.3",
-    "file-server-models":"*"
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
-    "@types/multer": "^1.3.10"
+    "@types/multer": "^1.3.10",
+    "@types/socket.io": "^2.1.11"
   }
 }
