--- a/file-control/package.json
+++ b/file-control/package.json
@@ -12,12 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "file-server-models":"*",
     "antd": "3.20.5",
     "axios": "^0.19.2",
     "concurrently": "^5.3.0",
     "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
+    "file-server-models": "*",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
@@ -33,7 +33,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "cd ../fileServer && yarn start",
+    "start-dev": "concurrently --kill-others \"yarn start-server\" \"yarn start\" "
   },
   "eslintConfig": {
     "extends": "react-app"
