--- a/fileServer/package.json
+++ b/fileServer/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "init": "tsc --init",
-    "start": "npm run build &&node dist/server/index.js"
+    "start": "yarn build &&node dist/server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "socket.io": "^2.3.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
