--- a/file-control/package.json
+++ b/file-control/package.json
@@ -18,7 +18,6 @@
     "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
     "file-server-models": "*",
-    "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
@@ -57,6 +56,7 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "http-proxy-middleware": "^1.0.5"
   }
 }
