--- a/file-control/package.json
+++ b/file-control/package.json
@@ -26,7 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "typescript": "~3.7.2"
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -53,10 +53,12 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.4",
+    "@types/socket.io-client": "^1.4.33",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "http-proxy-middleware": "^1.0.5",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "http-proxy-middleware": "^1.0.5"
+    "typescript": "~3.7.2"
   }
 }
